tests/ui-1.39_post/non_existent_attr.stderr
error[E0599]: no method named `non_existing_attribute` found for type `clap::args::arg::Arg<'_, '_>` in the current scope
  --> $DIR/non_existent_attr.rs:14:24
   |
14 |     #[structopt(short, non_existing_attribute = 1)]
   |                        ^^^^^^^^^^^^^^^^^^^^^^ method not found in `clap::args::arg::Arg<'_, '_>`

For more information about this error, try `rustc --explain E0599`.
